deployments/epp/prod-automation/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: epp
  namespace: epp--prod-automation
  labels:
    app_name: epp
    app_env: prod
spec:
  rules:
  - host: prod-automation--epp.elifesciences.org
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: epp-client
            port:
              number: 3000
